--- a/templates/base.html
+++ b/templates/base.html
@@ -25,6 +25,7 @@
                     <li><a href="/cours/seance1" class="nav-link">Géopolitique</a></li>
                     <li><a href="/cours/seance2" class="nav-link">État-nation</a></li>
                     <li><a href="/cours/seance3" class="nav-link">Conflits</a></li>
+                    <li><a href="/cours/seance4" class="nav-link">Frontières Europe</a></li>
                 </ul>
             </nav>
         </div>
