--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,7 @@
 
 {% block content %}
 <div class="page-header">
-    <h2>Cours d'Histoire des Relations Internationales </h2>
+    <h2>Cours de Géopolitique </h2>
 </div>
 
 <div class="cours-grid">
