--- a/templates/base.html
+++ b/templates/base.html
@@ -26,6 +26,10 @@
                     <li><a href="/cours/seance2" class="nav-link">État-nation</a></li>
                     <li><a href="/cours/seance3" class="nav-link">Conflits</a></li>
                     <li><a href="/cours/seance4" class="nav-link">Frontières Europe</a></li>
+                    <li><a href="/cours/seance5" class="nav-link">Aires Culturelles</a></li>
+                    <li><a href="/cours/seance6" class="nav-link">Inde</a></li>
+                    <li><a href="/cours/seance7" class="nav-link">Amerique Latine</a></li>
+                    <li><a href="/cours/seance8" class="nav-link">Moyen Orient</a></li>
                 </ul>
             </nav>
         </div>
