--- a/templates/cours_seance8.html
+++ b/templates/cours_seance8.html
@@ -1727,7 +1727,7 @@
             <div class="timeline">
                 <div class="timeline-event">
                     <div class="timeline-date">Février 1979</div>
-                    <div class="timeline-event                    <div class="timeline-event-content">
+                     <div class="timeline-event-content">
                         <h3 class="timeline-event-title">Révolution Islamique en Iran</h3>
                         <p class="timeline-event-description">
                             Le <strong>Shah d'Iran</strong> (Mohammad Reza Pahlavi), allié des USA, est renversé par un mouvement révolutionnaire populaire.<br><br>
