--- a/templates/base.html
+++ b/templates/base.html
@@ -43,7 +43,7 @@
 
     <footer>
         <div class="container">
-            <p>&copy; 2025 Cours de Géopolitique - Tous droits réservés</p>
+            <p>&copy; 2025 Cours de Géopolitique - Tiphaine RICHARD</p>
         </div>
     </footer>
 
